day 2 changes: layout added, tweets rendered, css improved.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,7 +16,8 @@ html {
 
 body {
   margin: 0;
-  color: #244751;
+  /* color: #244751; */
+  color: purple;
   background-color: #eee;
   font-family: 'Roboto Condensed', sans-serif;
 }
@@ -25,9 +26,11 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 body .container {
-  width: 450px;
   background-color: white;
   margin: auto;
+  width: 500px;
+  height: 500px;
+  
 }
 
 
