--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -65,7 +65,7 @@ article:hover{
     /* padding-top: 20px; */
     padding-bottom: 10px;
     display: inline;
-    
+    background-color: white;
 }
 p {
     float: right;
@@ -94,4 +94,8 @@ p {
     float: left;
     border: 1px solid #eee;
     border-radius: 5px;
+}
+.errors h5 {
+    /* display: none; */
+    padding-left: 10px;
 }
